[package]
name = "arse"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitfailure = "0.5.1"
futures = "0.3.25"
metar = "0.7.5"
reqwest = { version = "0.11", features = ["json"] }
serde = {version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.23.1", features = ["full"] }
