[package]
name = "arse"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitfailure = "0.5.1"
futures = "0.3.28"
metar = "0.7.6"
reqwest = { version = "0.11.18", features = ["json"] }
serde = {version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.31.0", features = ["full"] }
